--- a/360.md
+++ b/360.md
@@ -1,6 +1,6 @@
 ###360
 
 This is my 360 image
-https://360.vizor.io/v/gpwv
+<script src="//360.vizor.io/scripts/embed.js" data-vizorurl="https://360.vizor.io/embed/v/gpwv" ></script>
 
 ***
